// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
<Icon
  isSpinning={false}
  size="large"
  type="circle"
>
  <styled.i
    aria-hidden={true}
    className="icon fa circle"
    size="large"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa circle"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "XwtFX",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="large"
    >
      <i
        aria-hidden={true}
        className="icon fa circle XwtFX"
        size="large"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
<Icon
  isSpinning={false}
  size="medium"
  type="intelli-icon-avatar"
>
  <styled.i
    aria-hidden={true}
    className="icon fa intelli-icon-avatar"
    size="medium"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa intelli-icon-avatar"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "gvHWRV",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="medium"
    >
      <i
        aria-hidden={true}
        className="icon fa intelli-icon-avatar gvHWRV"
        size="medium"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render an icon with a badge 1`] = `
<Icon
  badge={
    <Badge
      backgroundColor="#1A2B3C"
      color="#1A293C"
      hasBorder={true}
      label={6}
      size="small"
    />
  }
  isSpinning={false}
  size="xlarge"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="xlarge"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa fa-check"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "ncspi",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="xlarge"
    >
      <i
        aria-hidden={true}
        className="icon fa fa-check ncspi"
        size="xlarge"
      />
    </StyledComponent>
  </styled.i>
  <styled.span
    size="xlarge"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "eLLZRT",
            "rules": Array [
              "
  position: absolute;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="xlarge"
    >
      <span
        className="eLLZRT"
        size="xlarge"
      >
        <Badge
          backgroundColor="#1A2B3C"
          color="#1A293C"
          hasBorder={true}
          label={6}
          size="medium"
        >
          <styled.span
            backgroundColor="#1A2B3C"
            color="#1A293C"
            hasBorder={true}
            size="medium"
          >
            <StyledComponent
              backgroundColor="#1A2B3C"
              color="#1A293C"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "bQSWNu",
                    "rules": Array [
                      "
  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  &, .fa {
  ",
                      [Function],
                      "
  }

  ",
                      [Function],
                      "

  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  user-select: none;

  .refresh-icon {
    background-color: transparent;
    position: relative;
    top: -1px;
    left: -1px;
  }
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "span",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              hasBorder={true}
              size="medium"
            >
              <span
                className="bQSWNu"
                color="#1A293C"
                size="medium"
              >
                6
              </span>
            </StyledComponent>
          </styled.span>
        </Badge>
      </span>
    </StyledComponent>
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with a custom size 1`] = `
<Icon
  customSize={2.6}
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    customSize={2.6}
    size="medium"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa fa-check"
      customSize={2.6}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "jdtxAT",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="medium"
    >
      <i
        aria-hidden={true}
        className="icon fa fa-check jdtxAT"
        size="medium"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with colour 1`] = `
<Icon
  color="#1A2B3C"
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    color="#1A2B3C"
    size="medium"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa fa-check"
      color="#1A2B3C"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "gcIcGN",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="medium"
    >
      <i
        aria-hidden={true}
        className="icon fa fa-check gcIcGN"
        color="#1A2B3C"
        size="medium"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
<Icon
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa fa-check"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "gvHWRV",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="medium"
    >
      <i
        aria-hidden={true}
        className="icon fa fa-check gvHWRV"
        size="medium"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`<Icon /> should render icon with size 1`] = `
<Icon
  isSpinning={false}
  size="medium"
  type="fa-check"
>
  <styled.i
    aria-hidden={true}
    className="icon fa fa-check"
    size="medium"
  >
    <StyledComponent
      aria-hidden={true}
      className="icon fa fa-check"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "gvHWRV",
            "rules": Array [
              "
   width: 1.28571em;

  ",
              [Function],
              "

  &.icon {
    text-align: center;

  ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="medium"
    >
      <i
        aria-hidden={true}
        className="icon fa fa-check gvHWRV"
        size="medium"
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;
